[gd_scene load_steps=7 format=3 uid="uid://2frmar6v358"]

[ext_resource type="Script" uid="uid://dqwkni2gtfme6" path="res://Scripts/Players/player_1.gd" id="1_2mvbs"]
[ext_resource type="ArrayMesh" uid="uid://iuukx63ioh3y" path="res://Models/Stickman1.obj" id="2_tmdyv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tmdyv"]
size = Vector3(0.190381, 1.4, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_p0e4v"]
size = Vector3(3, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ifihs"]
size = Vector3(0.159241, 1.33978, 0.189819)

[sub_resource type="BoxShape3D" id="BoxShape3D_p2y3g"]
size = Vector3(0.25, 0.75, 0.25)

[node name="Player1" type="CharacterBody3D"]
script = ExtResource("1_2mvbs")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 8.8818e-15, 0, 1, 0, -8.8818e-15, 0, 1, 1.69407e-21, 0.5, 2.84217e-14)
shape = SubResource("BoxShape3D_tmdyv")

[node name="Stickman1" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, 0, 0, -2.83122e-07)
mesh = ExtResource("2_tmdyv")

[node name="Punch Area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.00906, 1, 0)

[node name="PunchCollision" type="CollisionShape3D" parent="Punch Area"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.6, 0, 0)
shape = SubResource("BoxShape3D_p0e4v")

[node name="HitBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="HitCollision" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00186566, -0.52399, -0.000183105)
shape = SubResource("BoxShape3D_ifihs")

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0.08, 0)
shape = SubResource("BoxShape3D_p2y3g")
disabled = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
